--- a/about.html
+++ b/about.html
@@ -318,7 +318,7 @@
     <!-- Header -->
     <header>
         <nav>
-            <a href="index.html" class="logo">Chase Chile Landscaping</a>
+            <a href="index.html" class="logo">Chase Cheely Landscaping</a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
@@ -342,8 +342,8 @@
         <section id="about" class="section">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>About Chase Chile Landscaping</h2>
-                    <p>With over 15 years of experience in lawn care and landscaping, Chase Chile Landscaping has been the trusted choice for homeowners and businesses throughout the area. Our commitment to excellence and attention to detail sets us apart.</p>
+                    <h2>About Chase Cheely Landscaping</h2>
+<p>With over 15 years of experience in lawn care and landscaping, Chase Cheely Landscaping has been the trusted choice for homeowners and businesses throughout the area. Our commitment to excellence and attention to detail sets us apart.</p>
                     <p>We take pride in transforming ordinary lawns into extraordinary outdoor spaces. Our team of skilled professionals uses the latest equipment and techniques to ensure your property always looks its absolute best.</p>
                     
                     <div class="about-features">
@@ -381,7 +381,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Chase Chile Landscaping. All rights reserved.</p>
+        <p>&copy; 2024 Chase Cheely Landscaping. All rights reserved.</p>
         <p>Professional Lawn Care Services | Licensed & Insured</p>
         <div class="social-links">
             <a href="#" aria-label="Facebook">📘</a>
