--- a/gallery.html
+++ b/gallery.html
@@ -301,7 +301,7 @@
     <!-- Header -->
     <header>
         <nav>
-            <a href="index.html" class="logo">Chase Chile Landscaping</a>
+            <a href="index.html" class="logo">Chase Cheely Landscaping</a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
@@ -367,7 +367,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Chase Chile Landscaping. All rights reserved.</p>
+        <p>&copy; 2024 Chase Cheely Landscaping. All rights reserved.</p>
         <p>Professional Lawn Care Services | Licensed & Insured</p>
         <div class="social-links">
             <a href="#" aria-label="Facebook">📘</a>
