--- a/testimonials.html
+++ b/testimonials.html
@@ -437,7 +437,7 @@
     <!-- Header -->
     <header>
         <nav>
-            <a href="index.html" class="logo">Chase Chile Landscaping</a>
+            <a href="index.html" class="logo">Chase Cheely Landscaping</a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
@@ -466,7 +466,7 @@
                     
                     <div class="testimonials-grid">
                         <div class="testimonial-card">
-                            <p class="testimonial-text">"Chase Chile Landscaping transformed our overgrown yard into a beautiful oasis. Their attention to detail and professionalism is unmatched. Highly recommend!"</p>
+                            <p class="testimonial-text">"Chase Cheely Landscaping transformed our overgrown yard into a beautiful oasis. Their attention to detail and professionalism is unmatched. Highly recommend!"</p>
                             <p class="testimonial-author">- Sarah Johnson</p>
                             <div class="testimonial-rating">★★★★★</div>
                         </div>
@@ -560,7 +560,7 @@
                             Are you licensed and insured?
                         </div>
                         <div class="faq-answer">
-                            Absolutely! Chase Chile Landscaping is fully licensed and insured. We carry comprehensive liability insurance and all our employees are covered by workers' compensation. Your property and peace of mind are protected.
+                            Absolutely! Chase Cheely Landscaping is fully licensed and insured. We carry comprehensive liability insurance and all our employees are covered by workers' compensation. Your property and peace of mind are protected.
                         </div>
                     </div>
                     
@@ -588,7 +588,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Chase Chile Landscaping. All rights reserved.</p>
+        <p>&copy; 2024 Chase Cheely Landscaping. All rights reserved.</p>
         <p>Professional Lawn Care Services | Licensed & Insured</p>
         <div class="social-links">
             <a href="#" aria-label="Facebook">📘</a>
