--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="testimonials.html">Reviews</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" class="cta-button">Get Quote</a></li>
             </ul>
             <div class="mobile-menu-toggle" onclick="toggleMobileMenu()">
                 <span></span>
